fix overflow issues, skeleton formatting

--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -17,12 +17,9 @@
     font-weight: inherit;
 }
 
-.post a {
-   
-}
 .content {
     display: flex;
-    flex: 8;
+    flex: 9;
     max-width: 100%;
     flex-direction: column;
 }
@@ -69,7 +66,7 @@
     padding: 5px;
     margin: auto 0 0 0;
     display: flex;
-    
+    overflow: hidden;
     align-items: center;
 }
 
